--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "name": "angular2demo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
-    "go": "concurrently \"npm run tsc:w\" \"npm run lite\""
+    "go": "concurrently \"npm run tsc:w\" \"npm run lite\" "
   },
-  "author": "Sven Anders Robbestad <robbestad@gmail.com> (http://svenardo.com)",
   "license": "ISC",
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
+    "angular2": "2.0.0-beta.0",
     "bootstrap": "^3.3.6",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
-    "jquery": "^2.2.3",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.0",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.13",
+    "jquery": "^2.1.4",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "5.0.0-beta.0",
     "systemjs": "^0.19.27",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.5.10"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
-    "typescript": "^1.8.10"
+    "typescript": "^1.7.3"
   }
 }
